--- a/.nuget/MaxFactry.Module.App.Mvc4.nuspec
+++ b/.nuget/MaxFactry.Module.App.Mvc4.nuspec
@@ -2,7 +2,7 @@
 <package  xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
 	<metadata>
 		<id>MaxFactry.Module.App.Mvc4</id>
-		<version>1.0.2.3</version>
+		<version>1.0.3</version>
 		<title>MaxFactry App Module for IIS using Mvc4</title>
 		<authors>Brian Lakstins</authors>
 		<owners>brianlakstins</owners>
@@ -14,9 +14,14 @@
 		<copyright>Copyright © Brian A. Lakstins (http://www.lakstins.com/brian/)</copyright>
 		<tags></tags>
 		<dependencies>
+			<group targetFramework="net452">
+				<dependency id="MaxFactry.Core" version="1.0.*" />
+				<dependency id="MaxFactry.Base" version="1.0.*" />
+				<dependency id="MaxFactry.General" version="1.0.*" />
+				<dependency id="MaxFactry.General.AspNet.IIS.Mvc4" version="1.0.*" />
+				<dependency id="MaxFactry.Module.App" version="1.0.*" />
+			</group>
 			<group targetFramework=".NETFramework4.5.2">
-				<dependency id="MaxFactry.General.AspNet.IIS.Mvc4" version="1.0.2.2" />
-				<dependency id="MaxFactry.Module.App" version="1.0.2.2" />
 			</group>
 		</dependencies>
 		<summary>MaxFactry App Module Asp.Net for IIS supports the MaxFactry Framework</summary>
