Update references.  Update NuGet packages

--- a/MaxFactry.Module.App-NF-2.0/MaxFactry.Module.App-NF-2.0.csproj
+++ b/MaxFactry.Module.App-NF-2.0/MaxFactry.Module.App-NF-2.0.csproj
@@ -30,15 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MaxFactry.Base-NF-2.0, Version=1.0.3.0, Culture=neutral, PublicKeyToken=fbbc3eafbb4c95f8, processorArchitecture=MSIL">
-      <HintPath>..\..\_nuget\MaxFactry.Base.1.0.3\lib\net20\MaxFactry.Base-NF-2.0.dll</HintPath>
-    </Reference>
-    <Reference Include="MaxFactry.Core-NF-2.0, Version=1.0.3.0, Culture=neutral, PublicKeyToken=fbbc3eafbb4c95f8, processorArchitecture=MSIL">
-      <HintPath>..\..\_nuget\MaxFactry.Core.1.0.3\lib\net20\MaxFactry.Core-NF-2.0.dll</HintPath>
-    </Reference>
-    <Reference Include="MaxFactry.General-NF-2.0, Version=1.0.3.0, Culture=neutral, PublicKeyToken=fbbc3eafbb4c95f8, processorArchitecture=MSIL">
-      <HintPath>..\..\_nuget\MaxFactry.General.1.0.3\lib\net20\MaxFactry.General-NF-2.0.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -56,7 +47,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <PackageReference Include="MaxFactry.Base">
+      <Version>1.0.4</Version>
+    </PackageReference>
+    <PackageReference Include="MaxFactry.Core">
+      <Version>1.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="MaxFactry.General">
+      <Version>1.0.4</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
