--- a/MaxFactry.Module.App.Mvc5-NF-4.5.2/MaxFactry.Module.App.Mvc5-NF-4.5.2.csproj
+++ b/MaxFactry.Module.App.Mvc5-NF-4.5.2/MaxFactry.Module.App.Mvc5-NF-4.5.2.csproj
@@ -133,14 +133,13 @@
     <Content Include="Global.asax" />
   </ItemGroup>
   <ItemGroup>
-	  <Content Include="..\MaxFactry.Module.App.Mvc4-NF-4.5.2\Views\Web.config">
-		  <Link>Views\Web.config</Link>
-	  </Content>
-    <Content Include="MaxFactry.pfx" />
+    <Content Include="..\MaxFactry.Module.App.Mvc4-NF-4.5.2\Views\Web.config">
+      <Link>Views\Web.config</Link>
+    </Content>
     <Content Include="MaxFactry.snk" />
     <Content Include="..\MaxFactry.Module.App.Mvc4-NF-4.5.2\Views\Shared\MaxTheme\Default\_Layout.cshtml">
-		<Link>Views\Shared\MaxTheme\Default\_Layout.cshtml</Link>
-	</Content>
+      <Link>Views\Shared\MaxTheme\Default\_Layout.cshtml</Link>
+    </Content>
     <Content Include="ReadMe.md" />
   </ItemGroup>
   <ItemGroup>
@@ -153,23 +152,29 @@
     <Reference Include="HtmlAgilityPack, Version=1.5.1.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\..\_nuget\HtmlAgilityPack.1.5.1\lib\Net45\HtmlAgilityPack.dll</HintPath>
     </Reference>
-    <Reference Include="MaxFactry.Base-NF-4.5.2, Version=1.0.13.0, Culture=neutral, PublicKeyToken=fbbc3eafbb4c95f8, processorArchitecture=MSIL">
-      <HintPath>..\..\_nuget\MaxFactry.Base.1.0.13\lib\net452\MaxFactry.Base-NF-4.5.2.dll</HintPath>
+    <Reference Include="MaxFactry.Base-NF-4.5.2, Version=1.0.15.0, Culture=neutral, PublicKeyToken=fbbc3eafbb4c95f8, processorArchitecture=MSIL">
+      <HintPath>..\..\_nuget\MaxFactry.Base.1.0.15\lib\net452\MaxFactry.Base-NF-4.5.2.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="MaxFactry.Core-NF-4.5.2, Version=1.0.6.0, Culture=neutral, PublicKeyToken=fbbc3eafbb4c95f8, processorArchitecture=MSIL">
-      <HintPath>..\..\_nuget\MaxFactry.Core.1.0.6\lib\net452\MaxFactry.Core-NF-4.5.2.dll</HintPath>
+    <Reference Include="MaxFactry.Core-NF-4.5.2, Version=1.0.7.1, Culture=neutral, PublicKeyToken=fbbc3eafbb4c95f8, processorArchitecture=MSIL">
+      <HintPath>..\..\_nuget\MaxFactry.Core.1.0.7.1\lib\net452\MaxFactry.Core-NF-4.5.2.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="MaxFactry.General-NF-4.5.2, Version=1.0.10.0, Culture=neutral, PublicKeyToken=fbbc3eafbb4c95f8, processorArchitecture=MSIL">
-      <HintPath>..\..\_nuget\MaxFactry.General.1.0.11\lib\net452\MaxFactry.General-NF-4.5.2.dll</HintPath>
+    <Reference Include="MaxFactry.General-NF-4.5.2, Version=1.0.12.3, Culture=neutral, PublicKeyToken=fbbc3eafbb4c95f8, processorArchitecture=MSIL">
+      <HintPath>..\..\_nuget\MaxFactry.General.1.0.12\lib\net452\MaxFactry.General-NF-4.5.2.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="MaxFactry.General.AspNet-NF-4.5.2, Version=1.0.10.0, Culture=neutral, PublicKeyToken=fbbc3eafbb4c95f8, processorArchitecture=MSIL">
-      <HintPath>..\..\_nuget\MaxFactry.General.AspNet.1.0.11\lib\net452\MaxFactry.General.AspNet-NF-4.5.2.dll</HintPath>
+    <Reference Include="MaxFactry.General.AspNet-NF-4.5.2, Version=1.0.12.0, Culture=neutral, PublicKeyToken=fbbc3eafbb4c95f8, processorArchitecture=MSIL">
+      <HintPath>..\..\_nuget\MaxFactry.General.AspNet.1.0.12\lib\net452\MaxFactry.General.AspNet-NF-4.5.2.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="MaxFactry.General.AspNet.IIS-NF-4.5.2, Version=1.0.10.0, Culture=neutral, PublicKeyToken=fbbc3eafbb4c95f8, processorArchitecture=MSIL">
-      <HintPath>..\..\_nuget\MaxFactry.General.AspNet.IIS.1.0.11\lib\net452\MaxFactry.General.AspNet.IIS-NF-4.5.2.dll</HintPath>
+    <Reference Include="MaxFactry.General.AspNet.IIS-NF-4.5.2, Version=1.0.12.0, Culture=neutral, PublicKeyToken=fbbc3eafbb4c95f8, processorArchitecture=MSIL">
+      <HintPath>..\..\_nuget\MaxFactry.General.AspNet.IIS.1.0.12\lib\net452\MaxFactry.General.AspNet.IIS-NF-4.5.2.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="MaxFactry.General.AspNet.IIS.Mvc5-NF-4.5.2, Version=1.0.10.0, Culture=neutral, PublicKeyToken=fbbc3eafbb4c95f8, processorArchitecture=MSIL">
-      <HintPath>..\..\_nuget\MaxFactry.General.AspNet.IIS.Mvc5.1.0.11\lib\net452\MaxFactry.General.AspNet.IIS.Mvc5-NF-4.5.2.dll</HintPath>
+    <Reference Include="MaxFactry.General.AspNet.IIS.Mvc5-NF-4.5.2, Version=1.0.12.0, Culture=neutral, PublicKeyToken=fbbc3eafbb4c95f8, processorArchitecture=MSIL">
+      <HintPath>..\..\_nuget\MaxFactry.General.AspNet.IIS.Mvc5.1.0.12\lib\net452\MaxFactry.General.AspNet.IIS.Mvc5-NF-4.5.2.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Owin, Version=4.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -220,9 +225,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -243,6 +245,12 @@
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>MaxFactry.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
@@ -268,13 +276,6 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\..\_nuget\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\_nuget\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
-    <Error Condition="!Exists('..\..\_nuget\StrongNamer.0.2.5\build\StrongNamer.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\_nuget\StrongNamer.0.2.5\build\StrongNamer.targets'))" />
-  </Target>
   <Import Project="..\..\_nuget\StrongNamer.0.2.5\build\StrongNamer.targets" Condition="Exists('..\..\_nuget\StrongNamer.0.2.5\build\StrongNamer.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
