--- a/MaxFactry.Module.App.Mvc4-NF-4.5.2/packages.config
+++ b/MaxFactry.Module.App.Mvc4-NF-4.5.2/packages.config
@@ -8,7 +8,8 @@
   <package id="MaxFactry.General" version="1.0.13" targetFramework="net452" />
   <package id="MaxFactry.General.AspNet" version="1.0.13" targetFramework="net452" />
   <package id="MaxFactry.General.AspNet.IIS" version="1.0.13" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Mvc" version="4.0.40804.0" targetFramework="net452" />
+	<package id="MaxFactry.General.AspNet.IIS.Mvc4" version="1.0.16" targetFramework="net452" />
+	<package id="Microsoft.AspNet.Mvc" version="4.0.40804.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.30506.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net452" />
