Update NuGet package

--- a/MaxFactry.Module.App-NC-3.1/MaxFactry.Module.App-NC-3.1.csproj
+++ b/MaxFactry.Module.App-NC-3.1/MaxFactry.Module.App-NC-3.1.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>MaxFactry.Module.App</RootNamespace>
-	  <Version>1.0.22.1</Version>
-	  <AssemblyVersion>1.0.22.1</AssemblyVersion>
-	  <FileVersion>2023.07.25.01</FileVersion>
+	  <Version>1.0.22.2</Version>
+	  <AssemblyVersion>1.0.22.2</AssemblyVersion>
+	  <FileVersion>2023.07.25.02</FileVersion>
 	  <SignAssembly>True</SignAssembly>
 	  <AssemblyOriginatorKeyFile>MaxFactry.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MaxFactry.General" Version="1.0.22.1" />
+    <PackageReference Include="MaxFactry.General" Version="1.0.22.2" />
   </ItemGroup>
 
 </Project>
