Updates for changes to MaxFactry.Base

--- a/MaxFactry.Module.App-NC-6.0/MaxFactry.Module.App-NC-6.0.csproj
+++ b/MaxFactry.Module.App-NC-6.0/MaxFactry.Module.App-NC-6.0.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -30,6 +30,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="MaxFactry.General" Version="1.0.24.1" />
+		<PackageReference Include="MaxFactry.General" Version="1.0.24.3" />
 	</ItemGroup>
 </Project>
