Update NuGet packages

--- a/.nuget/MaxFactry.Module.App.nuspec
+++ b/.nuget/MaxFactry.Module.App.nuspec
@@ -2,7 +2,7 @@
 <package  xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>    
     <id>MaxFactry.Module.App</id>
-    <version>1.0.24.44</version>
+    <version>1.0.24.50</version>
     <title>MaxFactry App Module</title>
     <authors>Brian Lakstins</authors>
     <owners>brianlakstins</owners>
@@ -15,10 +15,22 @@
     <tags></tags>
 	  <dependencies>
 		  <group targetFramework="net20">
-			  <dependency id="MaxFactry.General" version="1.0.24.44" />
+			  <dependency id="MaxFactry.General" version="1.0.24.50" />
 		  </group>
 		  <group targetFramework="net452">
-			  <dependency id="MaxFactry.General" version="1.0.24.44" />
+			  <dependency id="MaxFactry.General" version="1.0.24.50" />
+		  </group>
+		  <group targetFramework="net472">
+			  <dependency id="MaxFactry.General" version="1.0.24.50" />
+		  </group>
+		  <group targetFramework="net48">
+			  <dependency id="MaxFactry.General" version="1.0.24.50" />
+		  </group>
+		  <group targetFramework=".NETCoreApp3.1">
+			  <dependency id="MaxFactry.General" version="1.0.24.50" />
+		  </group>
+		  <group targetFramework="net6.0">
+			  <dependency id="MaxFactry.General" version="1.0.24.50" />
 		  </group>
 	  </dependencies>
 	<summary>MaxFactry App supports the MaxFactry Framework</summary>
